src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>qbdialer__Call_Hour__c</fullName>
        <description>Hour in which the call was placed from the record&apos;s perspective</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Lead_Status__c</fullName>
        <description>Lead Status of the record called</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Ring_Time__c</fullName>
        <description>Ring Time of the phone call</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Time_Zone__c</fullName>
        <description>Time zone of the number being called</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ImpressionId__c</fullName>
        <externalId>true</externalId>
        <label>Impression ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__SMSReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text message reminders will be sent to all attendees at the set reminder time.</inlineHelpText>
        <label>Send text msg reminder to all attendees</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Account_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Acquisition_Campaign__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Business_Days_in_Month__c</columns>
        <columns>Day_of_the_Month__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Object__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account Activities</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>Lead_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Acquisition_Campaign__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Object__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Activities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>Acquisition_Campaign__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Object__c</field>
            <operation>equals</operation>
            <value>Opportunity</value>
        </filters>
        <label>Opportunity Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>